# MolClusterkit

./: README.md  pyproject.toml
src/MolClusterkit/: __init__.py  best_picker.py  butina.py  logger.py  mcs.py  misc.py  version_helper.py
src/MolClusterkit/ci/: butina_cluster.py  mcs_cluster.py
src/MolClusterkit/cli/: butina_cluster.py  mcs_cluster.py  utils.py
tests/: test_butina.py  test_mcs.py
tests/resources/: HIV-sample.smi
